--- a/application/templates/paraphaser.html
+++ b/application/templates/paraphaser.html
@@ -1,6 +1,31 @@
 {% extends "base.html" %}
 
 {% block content %}
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png"
+      href="https://res.cloudinary.com/thecavemann/image/upload/v1571839870/logo_g4kuoa.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="theme-color" content="#333" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" type="text/css" href="../static/css/teampage.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/png"
+      href="https://res.cloudinary.com/thecavemann/image/upload/v1571839870/logo_g4kuoa.png" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  
+    <title>Docufix | Team Page</title>
+    <script type="text/javascript" src="//widget.instabot.io/jsapi/rokoInstabot.js" crossorigin>
+      apiKey: "vXj90M2ifAvu8fS739jFKepTXtES72ur59sGR5TPK9c="
+    </script>
+  </head>
 <div class="container">
 <h1>Paraphrasing Tool</h1>
 <hr>
