--- a/application/templates/plagiarism_check.html
+++ b/application/templates/plagiarism_check.html
@@ -1,6 +1,31 @@
 {% extends "base.html" %}
 
 {% block content %}
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png"
+      href="https://res.cloudinary.com/thecavemann/image/upload/v1571839870/logo_g4kuoa.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="theme-color" content="#333" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" type="text/css" href="../static/css/teampage.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/png"
+      href="https://res.cloudinary.com/thecavemann/image/upload/v1571839870/logo_g4kuoa.png" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  
+    <title>Docufix | Team Page</title>
+    <script type="text/javascript" src="//widget.instabot.io/jsapi/rokoInstabot.js" crossorigin>
+      apiKey: "vXj90M2ifAvu8fS739jFKepTXtES72ur59sGR5TPK9c="
+    </script>
+  </head>
 <h1>Plagiarism Check</h1>
 <form method="POST">
     {{ form.hidden_tag() }}
@@ -10,13 +35,20 @@
     </div>
     <button type="submit" class="btn btn-primary">Paraphase</button>
 </form>
-<ul>
-    {% for result in plagiarism_check %}
-    <li>
-        <p>Article: {{ result.article }}</p>
-        <p>Plagiarism score: {{ result.plagiarism_score }}</p>
-    </li>
-    {% endfor %}
+{% if plagiarism_check %}
+    <h2>Results:</h2>
+    <p><strong>Input Text:</strong> {{ plagiarism_check[0] }}</p>
+    {% if plagiarism_check[1] %}
+        <p><strong>Most Similar Results:</strong></p>
+        <ol>
+            {% for result in plagiarism_check[1] %}
+                <li><a href="{{ result[0] }}">{{ result[0] }}</a> ({{ result[1] }}% similarity)</li>
+            {% endfor %}
+        </ol>
+    {% else %}
+        <p>No matching documents found.</p>
+    {% endif %}
+{% endif %}
 </ul>
 
 
