--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -5,43 +5,56 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" type="text/css" href="../static/css/header&footer.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/teampage.css" />
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <ul class='nav'>
-      <li class='nav-link'>
-        <a href="{{url_for('core.index')}}">Home</a>
+      <li class='nav-item'>
+        <a class="nav-link" href="{{url_for('core.index')}}">Home</a>
       </li>
-      <li class='nav-link'>
-        <a href="{{url_for('core.info')}}">About</a>
+      <li class='nav-item'>
+        <a class="nav-link" href="{{url_for('core.info')}}">About</a>
       </li>
       {% if current_user.is_authenticated %}
-      <li class='nav-link'>
-        <a href="{{url_for('users.logout')}}">Log Out</a>
+      <li class='nav-item'>
+        <a class="nav-link" href="{{url_for('users.logout')}}">Log Out</a>
       </li>
-      <li class='nav-link'>
-        <a href="{{url_for('users.account')}}">Account</a>
+      <li class='nav-item'>
+        <a class="nav-link" href="{{url_for('users.account')}}">Account</a>
       </li>
+      <li class="'nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Tools
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="{{url_for('paraphrasing.index')}}">Paraphase</a>
+          <a class="dropdown-item" href="{{url_for('text_completion.index')}}">Text completion</a>
+          <a class="dropdown-item" href="{{url_for('grammar_check.index')}}">Grammar check</a>
+          <a class="dropdown-item" href="{{url_for('plagiarism_check.index')}}">Plagiarism</a>
+        </div>
+      {% elif 'profile' in session %}
       <li class='nav-link'>
-        <a href="{{url_for('paraphrasing.index')}}">Paraphase</a>
+        <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
       </li>
-      <li class='nav-link'>
-        <a href="{{url_for('text_completion.index')}}">Text completion</a>
-      </li>
-      <li class='nav-link'>
-        <a href="{{url_for('grammar_check.index')}}">Grammar check</a>
-      </li>
-      <li class='nav-link'>
-        <a href="{{url_for('plagiarism_check.index')}}">Plagiarism</a>
-      </li>
+      <li class="'nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Tools
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="{{url_for('paraphrasing.index')}}">Paraphase</a>
+          <a class="dropdown-item" href="{{url_for('text_completion.index')}}">Text completion</a>
+          <a class="dropdown-item" href="{{url_for('grammar_check.index')}}">Grammar check</a>
+          <a class="dropdown-item" href="{{url_for('plagiarism_check.index')}}">Plagiarism</a>
+        </div>
       {% else %}
-      <li class='nav-link'>
-        <a href="{{url_for('users.login')}}">Log In</a>
+      <li class='nav-item'>
+        <a class="nav-link" href="{{url_for('users.login')}}">Log In</a>
       </li>
-      <li class='nav-link'>
-        <a href="{{url_for('users.register')}}">Register</a>
+      <li class='nav-item'>
+        <a class="nav-link" href="{{url_for('users.register')}}">Register</a>
       </li>
       {% endif %}
     </ul>
@@ -49,6 +62,37 @@
   {% block content %}
 
   {% endblock %}
+</div>
+<footer id="footer">
+  <div class="container mt-3"><hr>
+    <div class="row">
+        <div class="col-sm-6" id="docufix">
+            <a class="navbar-brand  text-justify" href="index.html"><img src="https://res.cloudinary.com/kuic/image/upload/v1572638901/docufix/Docufix_Logo_lnsgsr.svg" alt="DOCUFIX" id="image"></a>
+            <p class="text-justify">This app was built by <a href="https://hng.tech/" target="_blank">HNGi6</a> interns</p>
+        </div>
+      <div class="col-sm-6 text-center">           
+          <ul class="list-inline text-center mt-3 pl-3">  
+              <li class="list-inline-item">
+                <a class="text-center" href="contact.html">Contact us</a>
+              </li>
+              <li class="list-inline-item">
+                  <a class="text-center" href="faq.html">FAQs</a>
+                </li>
+                <li class="list-inline-item">
+                <a class="text-center" href="why-use-docufix.html">Why use Docufix</a>
+              </li>
+                <li class="list-inline-item">
+                    <a class="text-center" href="termsOfService.html">Terms and Conditions</a>
+                  </li>
+              <li class="list-inline-item">
+                  <a class="text-center" href="privacy.html">Privacy Policy</a>
+              </li>
+              
+            </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 </div>
 
 
