--- a/application/templates/info.html
+++ b/application/templates/info.html
@@ -135,7 +135,7 @@
   </main>
 
   <!--Footer-->
-  <footer id="footer">
+  <!-- <footer id="footer">
     <div class="container mt-3">
       <hr />
       <div class="row">
@@ -169,7 +169,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <script src="app.js"></script>
   <script src="https://kit.fontawesome.com/85682eb992.js" crossorigin="anonymous"></script>
