--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#333" />
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" type="text/css" href="../static/css/teampage.css" />
+  <link rel="stylesheet" type="text/css" href="../static/css/index.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet" />
   <link rel="icon" type="image/png"
@@ -26,6 +26,6 @@
   </script>
 </head>
   <div class="jumbotron">
-    <h1>Writing Assistant</h1>
+    <h1>WRITING ASSISTANT</h1>
   </div>
 {% endblock %}
