--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#333" />
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" type="text/css" href="../static/css/teampage.css" />
+  <link rel="stylesheet" type="text/css" href="../static/css/login.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet" />
   <link rel="icon" type="image/png"
@@ -25,14 +25,26 @@
     apiKey: "vXj90M2ifAvu8fS739jFKepTXtES72ur59sGR5TPK9c="
   </script>
 </head>
-  <form method="POST">
+<div id="container">
+  <form method="POST" class="my-form">
     {{form.hidden_tag()}}
-    {{form.email.label}}{{form.email}}<br>
-    {{form.password.label}}{{form.password}}<br>
+    <h1 class="signup">Login</h1>
+    <div class="form-group">
+      {{form.email.label(class="form-label")}}
+      {{form.email(class="form-control")}}
+    </div>
+    <div class="form-group">
+      {{form.password.label(class="form-label")}}
+      {{form.password(class="form-control")}}
+    </div>
     {{form.submit()}}
+    <p>Or login with:</p>
+    <a href="{{ url_for('auth.login') }}" class="btn btn-danger">
+      <i class="fa fa-google"></i> Login with Google
+    </a>
   </form>
-  <p>Or login with:</p>
-  <a href="{{ url_for('auth.login') }}" class="btn btn-danger">
-    <i class="fa fa-google"></i> Login with Google
-  </a>
+  <div class="jumbotron">
+    <h1 class="title">WRITING ASSISTANT</h1>
+  </div>
+</div>
 {% endblock %}
