--- a/application/templates/paraphaser.html
+++ b/application/templates/paraphaser.html
@@ -37,57 +37,19 @@
     </div>
     <button type="submit" class="btn btn-primary">Paraphase</button>
 </form>
-
-<!-- {% if paraphrase_check %}
-    <p>Paraphrased text: {{ paraphrase_check }}</p>
-{% endif %} -->
+<div>
 {% if paraphrase_check %}
-    <ol>
-        <li>{{ paraphrase_check }}</li>
-    </ol>
-{% endif %}
-
-<!-- <h1>Paraphrasing</h1>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.input_text.label }}
-        {{ form.input_text(size=40) }}
-    </p>
-    <p><input type="submit" value="Paraphrase"></p>
-</form>
-{% if paraphrases %}
-    <h2>Paraphrased Text:</h2>
-    {% for paraphrase in paraphrases %}
-        <p>{{ paraphrase }}</p>
+    <h2>Results:</h2>
+    <ul>
+    {% for paraphrase in paraphrase_check %}
+        <li>{{ paraphrase }}</li>
     {% endfor %}
+    </ul>
 {% endif %}
-{% endblock %} -->
+</div>
+</div>
+
+{% endblock%}
 
 
 
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <title>Paraphraser</title>
-</head>
-<body>
-    <h1>Paraphraser</h1>
-    <form method="POST">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.input_text.label }}
-            {{ form.input_text(size=40) }}
-            {% for error in form.input_text.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p><input type="submit" value="Paraphrase"></p>
-    </form>
-
-    {% if paraphrase_check %}
-    <h2>Paraphrase:</h2>
-    <p>{{ paraphrase_check }}</p>
-    {% endif %}
-</body>
-</html> -->
