--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -39,6 +39,9 @@
       <li class='nav-item'>
         <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
       </li>
+      <li class='nav-item'>
+        <a class="nav-link" href="{{url_for('auth.google_auth')}}">Log Out</a>
+      </li>
       <li class="'nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Tools
