--- a/application/static/css/Paraphrase.css
+++ b/application/static/css/Paraphrase.css
@@ -1,4 +1,4 @@
-.body {
+/* .body {
   background-color: #e5e5e5;
 }
 .div1 {
@@ -19,7 +19,7 @@ textarea {
   color: #3b1f9e;
   margin: 2px;
   outline: none;
-}
+} */
 /*.btn_file{
 	border-radius: 20px;
 	background-color: #EDEDF4;
@@ -33,7 +33,7 @@ textarea {
    padding: 4px;
    outline: none;
 }*/
-.btn_text {
+/* .btn_text {
   border-radius: 20px;
   background-color: #3b1f9e;
   color: #ffffff;
@@ -44,10 +44,10 @@ textarea {
   font-size: 18px;
   line-height: 130%;
   padding: 4px;
-  outline: none;
+  outline: none; */
   /*margin-left: -30px;*/
-}
-.para_btn {
+/* } */
+/* .para_btn {
   background-color: #3b1f9e;
   color: white;
   border-radius: 20px;
@@ -98,4 +98,76 @@ textarea {
   font-size: 14px;
   line-height: 19px;
   color: #3b1f9e;
+} */
+
+body {
+  height: 100vh;
+}
+
+.container {
+  height: 80vh;
+}
+
+h1 {
+  margin-top: 30px;
+  font-weight: bolder;
+}
+
+#container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 85%;
+}
+
+#container textarea {
+  height: 100%;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+form, .result {
+  width: 48%;
+}
+
+.form-group {
+  height: 85%;
+  margin: 0 !important;
+}
+
+
+.btn-primary {
+  margin-top: 15px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+}
+
+span {
+  margin-bottom: 8px;
+}
+
+.result-box {
+  height: 85%;
+  border-radius: 4px;
+  border: #ccc 1px solid;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  background-color: #fff;
+}
+
+.result-choice{
+  padding: 6px 12px;
+  border-bottom: #B0B0B0 2px solid;
+  background-color: #fff;
+  overflow-y: auto;
+  height: 32%;
+}
+
+.result-choice:nth-child(2), .result-choice:last-child {
+  margin-top: 8px;
+}
+
+.result-choice:last-child {
+  border-bottom: none !important;
 }
