--- a/application/static/css/index.css
+++ b/application/static/css/index.css
@@ -6,7 +6,7 @@ body > .container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-    height: 80%;
+    height: 80vh;
 }
 
 .jumbotron {
