--- a/application/static/css/register.css
+++ b/application/static/css/register.css
@@ -9,7 +9,7 @@ body {
 }
 
 body > .container {
-	height: 80%;
+	height: 80vh;
 	display: flex;
 	align-items: center;
 }
@@ -57,6 +57,7 @@ body > .container > #container {
 
 .signup {
 	text-align: center;
+	font-weight: bolder !important;
 }
 
 .form-group {
