--- a/application/templates/error_pages/404.html
+++ b/application/templates/error_pages/404.html
@@ -1,6 +1,23 @@
 {% extends "base.html" %}
+
 {% block content %}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/Writing-Assistant/application/static/css/errorstyle/error.css">
+  <title>Error 404</title>
+  <style>
+    .jumbotron {
+      height: 75vh; 
+      margin-top: 30px;
+      background-image: url(https://blog.thomasnet.com/hubfs/shutterstock_774749455.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
+  </style>
+</head>
   <div class="jumbotron">
-    <h1>404 PAGE NOT FOUND!</h1>
+    
   </div>
 {% endblock %}
