--- a/application/templates/info.html
+++ b/application/templates/info.html
@@ -77,7 +77,7 @@
                     <p>Front-End Developer</p>
                   </div>
                   <div class="user-content">
-                    <b> Chưa làm lồn gì.</b>
+                    <b>Tớ là Hoàng</b>
                     <p class="text-center pt-4">SlackUsername : @Major</p>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                     <p>Researcher</p>
                   </div>
                   <div class="user-content">
-                    <b>Chưa làm cặc gì.</b>
+                    <b>Tớ là Minh</b>
                     <p class="text-center pt-5">SlackUsername : @Rammy</p>
                   </div>
                 </div>
