--- a/application/static/css/grammar.css
+++ b/application/static/css/grammar.css
@@ -7,6 +7,14 @@ body > .container {
     height: 100%;
 }
 
+.nav-item:nth-child(2) > .nav-link {
+	background: #fff;
+}
+
+.dropdown-item:nth-child(3), .dropdown-toggle {
+    background: linear-gradient(to right, #FF4B2B, #FF416C);
+  }
+
 .form-group textarea {
     height: 300px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
