--- a/application/static/css/login.css
+++ b/application/static/css/login.css
@@ -24,6 +24,14 @@ body > .container > #container {
 	width: 100%;
 }
 
+.nav-item:nth-child(2) > .nav-link {
+	background: #fff;
+}
+
+.nav-item:nth-child(3) > .nav-link {
+	background: linear-gradient(to right, #FF4B2B, #FF416C);
+}
+
 .my-form {
 	display: flex;
 	flex-direction: column;
