--- a/application/static/css/teampage.css
+++ b/application/static/css/teampage.css
@@ -14,6 +14,10 @@
 		   .content-box {
 			   padding: 60px 0 60px 0;
 		   }
+
+		   .nav-item:nth-child(2) > .nav-link {
+				background: linear-gradient(to right, #FF4B2B, #FF416C);
+		   }
 		   
 		   .content-title h3 {
 			   font-size: 1.875em !important;
