--- a/application/templates/account.html
+++ b/application/templates/account.html
@@ -8,7 +8,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#333" />
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" type="text/css" href="../static/css/teampage.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet" />
   <link rel="icon" type="image/png"
@@ -19,34 +18,34 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-
-  <title>Docufix | Team Page</title>
+  <link rel="stylesheet" href="../static/css/account.css">
+  <title>Wrriting Assistant | Account</title>
   <script type="text/javascript" src="//widget.instabot.io/jsapi/rokoInstabot.js" crossorigin>
     apiKey: "vXj90M2ifAvu8fS739jFKepTXtES72ur59sGR5TPK9c="
   </script>
 </head>
-  <div class="jumbotron">
-    <div align='center'>
-      <h1>Welcome to the page for {{current_user.username}}</h1>
-      <img align='center' src="{{url_for('static',filename='profile_pics/'+current_user.profile_image)}}">
+  <div id="container">
+    <div class="jumbotron">
+      <div align='center'>
+        <h1>Welcome to the page, {{current_user.username}}</h1>
+        <img align='center' src="{{url_for('static',filename='profile_pics/'+current_user.profile_image)}}">
+      </div>
     </div>
-  </div>
-
-  <div class="container">
-    <form method="POST">
+    <form method="POST" class="my-form">
+      <h1>My Account</h1>
         {{form.hidden_tag()}}
       <div class="form-group">
-        {{form.username.label(class='form-group')}}
+        {{form.username.label(class='form-label')}}
         {{form.username(class='form-control')}}
       </div>
     
       <div class="form-group">
-      {{form.email.label(class='form-group')}}
+      {{form.email.label(class='form-label')}}
       {{form.email(class='form-control')}}
       </div>
 
       <div class="form-group">
-      {{form.picture.label(class='form-group')}}
+      {{form.picture.label(class='form-label')}}
       {{form.picture(class='form-control')}}
       </div>
 
