--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
-  <title>Docufix | Team Page</title>
+  <title>LOGIN</title>
   <script type="text/javascript" src="//widget.instabot.io/jsapi/rokoInstabot.js" crossorigin>
     apiKey: "vXj90M2ifAvu8fS739jFKepTXtES72ur59sGR5TPK9c="
   </script>
