--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -24,9 +24,16 @@
       <li class='nav-item'>
         <a class="nav-link" href="{{url_for('users.account')}}">Account</a>
       </li>
-      <li class='nav-item'>
-        <a class="nav-link" href="{{url_for('dashboard.index')}}">Dashboard</a>
-      </li>
+      <li class="'nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dashboard
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="{{url_for('grammar_check.index')}}">Paraphase</a>
+          <a class="dropdown-item" href="{{url_for('dashboard.textcompletion')}}">Text completion</a>
+          <a class="dropdown-item" href="{{url_for('dashboard.grammarcheck')}}">Grammar check</a>
+          <a class="dropdown-item" href="{{url_for('plagiarism_check.index')}}">Plagiarism</a>
+        </div>
       <li class="'nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Tools
